--- a/index.html
+++ b/index.html
@@ -99,43 +99,45 @@
 
 
         <section class="team">
-            <div>
-                <img src="https://s3-alpha-sig.figma.com/img/8c1e/65c1/01b0562402f9066520924acac0be8dc7?Expires=1730678400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=T~i-91qPnvBCnPzMGt6VyQT7fkfJmd5nJYNmMIV0fYffddmJ4VB3WkAcHvK7Vz7~heXkwXXu9Y0FS1VBRax~0hkY8bGOuEsHmmAk41B5gNNkB1LacaVpct0TCqJI15GATscOrjAS8zh5THKNpRuCcgxYoA52i6FWfvR03w57KCTPp4vaLnFIDXN6zcwsxewdrH3hM0e2DpQJ0fh6fXlwxbLfjLlMcamSYMWM6pz2mKUgQm8lkemGZJzPJoyUg1ssf6iAN7dIjLQ6QGs1zm-sxiEUR1bv8zpPOn5da-L95ac4enF7ZCvRP0CdUmeM8LOkmKFDr24682jMSItYvHSSqw__"
-                    alt="img">
-                <h4>Ігор Дем'яненко</h4>
-                <h5>Product Designer</h5>
-            </div>
-
-            <div>
-                <img src="https://s3-alpha-sig.figma.com/img/cbc1/4371/8ed9ff0c05008e3e7ae5285b05efd211?Expires=1730678400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=N7qiMRUe4PiWmCoayhV33whGX2u6YGWQHL6A7CfkCpiTJcMAQSNF7iC3xujMmcspz969JHrXki9jILbdWbHT140L2AKPQIB-OyeNP94mtltYjoKa3MHObEFBGNR~8ZEnY-8E1X7bp4wG1O3CpT1nNsYVRnn-udgWLiI64v9x3HvQp2xcrC7JSCgW6T9dS5vrTP~VjuXivlw9-MkX4qsrDekJitArhJ-rpqWrOz1tNddKIfm7-t5qExnLXKB~dSmptNsqdEYvM79CUWo1UAKNNv0gc0GWDMIIH7LmKBl7xtE7lavJdt8S2sIWyv0eVOePPu0bsQfnfGAYCt~rDS7tbQ__"
-                    alt="img">
-                <h4>Ольга Рєпіна
-                </h4>
-                <h5>Frontend Developer</h5>
-            </div>
-
-            <div>
-                <img src="https://s3-alpha-sig.figma.com/img/b9f5/1817/c03fb848ed9dfc89543bbe97156c3661?Expires=1730678400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=ACKYOpZ8MKNL-rTqh5d2BgxjVB~I9eSZR4HonHFyPBxZrOxdLmLuGOn6dAwMLVKGH41EjSMbO1CCI5VBdjLntC-NqRxtZzM~U5wTWdl1vj-k6TEg6otXMYfhbLH68t74RqsBH7-73IGDN7cN0dLBO9g9b-vJU-eCaXaxTrRcOcM-C9Ib4FHQXiXoYAZVpud12kSDnjVohQGXYQx6ecaVcpUJaB1T8NZijZK2J0NxEryq1AOWlRxe-WkrhdXceJDEEY7EvVBlJZRJ2KJ13YdX8Njr6AWgy4NjHsSOi3trlG9v~HlGMFvrCiczFmkT5HBEPV3tQjpg9bmuDpyfZBpGqQ__"
-                    alt="img">
-                <h4>Микола Тарасов</h4>
-                <h5>Marketing</h5>
-            </div>
-
-            <div>
-                <img src="https://s3-alpha-sig.figma.com/img/335d/4d84/7ff905b2d5f56aa0d2b29aa48e997cd8?Expires=1730678400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=IlpuhwsM9ngBY65IHzQyGj~JKMCXAB5BDCZE16eDzUzO0QK45OeDKL44PPvGzg1AamPEL5OGnGYJC---4WYXxZVDtXHJ6tZ0pnOwElBLGfJ-eEWObKOE8CS8YsDiDqUxfPNvmZZgg2yRr9qcDW3H5QRkAOUDMnqSHcHTciKXaqTEUpbJYH~o94-xchRtUUZiRX~VsXz-VjEVOma9Ts1w0auu607IOGB7~pyV4-ozAiqZ0WpObxnwniaFqHqeJSitJds~EOIikz0UuV08F3XG5vRnN2JktcYxwovoAAXNms4q1Tzz5URLisUauXHYuzSVg861DqcB-yJdTdx35-4Bew__"
-                    alt="img">
-                <h4>Михайло Єрмаков</h4>
-                <h5>UI Designer</h5>
+            <h2>Наша команда</h2>
+            <div class="team_content">
+                <div>
+                    <img src="img/img.jpg"
+                        alt="img">
+                    <h4>Ігор Дем'яненко</h4>
+                    <h5>Product Designer</h5>
+                </div>
+                <div>
+                    <img src="img/img (1).jpg"
+                        alt="img">
+                    <h4>Ольга Рєпіна
+                    </h4>
+                    <h5>Frontend Developer</h5>
+                </div>
+                <div>
+                    <img src="img/img (2).jpg"
+                        alt="img">
+                    <h4>Микола Тарасов</h4>
+                    <h5>Marketing</h5>
+                </div>
+                <div>
+                    <img src="img/img (3).jpg"
+                        alt="img">
+                    <h4>Михайло Єрмаков</h4>
+                    <h5>UI Designer</h5>
+                </div>
             </div>
 
         </section>
     </main>
 
     <footer>
-<h6 class="logo">WebStudio</h6>
-<span>м. Київ, пр-т Лесі Українки, 26</span>
-<span>info@devstudio.com</span>
-<span>+38 096 111 11 11</span>
+<div>
+    <img src="img/WebStudio (2).png" alt="logo">
+    <h6>м. Київ, пр-т Лесі Українки, 26</h6>
+    <span>info@devstudio.com</span>
+    <span>+38 096 111 11 11</span>
+</div>
     </footer>
 </body>
 
