--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -89,16 +89,16 @@
             <h5>Product Designer</h5>
             <div class="div_icons">
               <svg class="svg_icon">
-                <use href="symbol-defs.svg#icon-insta-1"></use>
+                <use href="img/symbol-defs.svg#icon-insta"></use>
               </svg>
               <svg class="svg_icon">
-                <use href="symbol-defs.svg#icon-twiter-1"></use>
+                <use href="img/symbol-defs.svg#icon-twiter"></use>
               </svg>
               <svg class="svg_icon">
-                <use href="symbol-defs.svg#icon-facebook-1"></use>
+                <use href="img/symbol-defs.svg#icon-facebook"></use>
               </svg>
               <svg class="svg_icon">
-                <use href="symbol-defs.svg#icon-in-1"></use>
+                <use href="img/symbol-defs.svg#icon-in"></use>
               </svg>
             </div>
           </div>
@@ -109,16 +109,16 @@
             <h5>Frontend Developer</h5>
             <div class="div_icons">
               <svg class="svg_icon">
-                <use href="symbol-defs.svg#icon-insta-1"></use>
+                <use href="img/symbol-defs.svg#icon-insta"></use>
               </svg>
               <svg class="svg_icon">
-                <use href="symbol-defs.svg#icon-twiter-1"></use>
+                <use href="img/symbol-defs.svg#icon-twiter"></use>
               </svg>
               <svg class="svg_icon">
-                <use href="symbol-defs.svg#icon-facebook-1"></use>
+                <use href="img/symbol-defs.svg#icon-facebook"></use>
               </svg>
               <svg class="svg_icon">
-                <use href="symbol-defs.svg#icon-in-1"></use>
+                <use href="img/symbol-defs.svg#icon-in"></use>
               </svg>
             </div>
           </div>
@@ -129,16 +129,16 @@
             <h5>Marketing</h5>
             <div class="div_icons">
               <svg class="svg_icon">
-                <use href="symbol-defs.svg#icon-insta-1"></use>
+                <use href="img/symbol-defs.svg#icon-insta"></use>
               </svg>
               <svg class="svg_icon">
-                <use href="symbol-defs.svg#icon-twiter-1"></use>
+                <use href="img/symbol-defs.svg#icon-twiter"></use>
               </svg>
               <svg class="svg_icon">
-                <use href="symbol-defs.svg#icon-facebook-1"></use>
+                <use href="img/symbol-defs.svg#icon-facebook"></use>
               </svg>
               <svg class="svg_icon">
-                <use href="symbol-defs.svg#icon-in-1"></use>
+                <use href="img/symbol-defs.svg#icon-in"></use>
               </svg>
             </div>
           </div>
@@ -149,16 +149,16 @@
             <h5>UI Designer</h5>
             <div class="div_icons">
               <svg class="svg_icon">
-                <use href="symbol-defs.svg#icon-insta-1"></use>
+                <use href="img/symbol-defs.svg#icon-insta"></use>
               </svg>
               <svg class="svg_icon">
-                <use href="symbol-defs.svg#icon-twiter-1"></use>
+                <use href="img/symbol-defs.svg#icon-twiter"></use>
               </svg>
               <svg class="svg_icon">
-                <use href="symbol-defs.svg#icon-facebook-1"></use>
+                <use href="img/symbol-defs.svg#icon-facebook"></use>
               </svg>
               <svg class="svg_icon">
-                <use href="symbol-defs.svg#icon-in-1"></use>
+                <use href="img/symbol-defs.svg#icon-in"></use>
               </svg>
             </div>
           </div>
@@ -169,19 +169,22 @@
         <h2>Постійні клієнти</h2>
         <div>
           <svg class="svg_icon_brands">
-            <use href="symbol-defs.svg#icon-Client-1-1"></use>
+            <use href="img/symbol-defs.svg#icon-Client1"></use>
           </svg>
           <svg class="svg_icon_brands">
-            <use href="symbol-defs.svg#icon-Client-2-1"></use>
+            <use href="img/symbol-defs.svg#icon-Client2"></use>
           </svg>
           <svg class="svg_icon_brands">
-            <use href="symbol-defs.svg#icon-Client-3-1"></use>
+            <use href="img/symbol-defs.svg#icon-Client3"></use>
           </svg>
           <svg class="svg_icon_brands">
-            <use href="symbol-defs.svg#icon-Client-4-1"></use>
+            <use href="img/symbol-defs.svg#icon-Client4"></use>
           </svg>
           <svg class="svg_icon_brands">
-            <use href="symbol-defs.svg#icon-Client-5-1"></use>
+            <use href="img/symbol-defs.svg#icon-Client5"></use>
+          </svg>
+          <svg class="svg_icon_brands">
+            <use href="img/symbol-defs.svg#icon-Client6"></use>
           </svg>
         </div>
       </section>
