--- a/index.html
+++ b/index.html
@@ -73,12 +73,28 @@
 
       <section class="about">
         <h2>Чим ми займаємося</h2>
-        <div>
-          <img src="img/box 1.jpg" alt="img" />
-          <img src="img/box 2.png" alt="img" />
-          <img src="img/box 3.png" alt="img" />
+        <div class="div_about">
+
+         <div class="div_about_box1">
+          <div class="box_title">
+            <p>Десктопні додатки</p>
+          </div>
+         </div>
+         <div class="div_about_box2">
+          <div class="box_title">
+            <p>Мобільні додатки</p>
+          </div>
+         </div>
+         <div class="div_about_box3">
+          <div class="box_title">
+            <p>Дизайнерські рішення</p>
+          </div>
+         </div>
+          
         </div>
       </section>
+
+
 
       <section class="team">
         <h2>Наша команда</h2>
