--- a/index.html
+++ b/index.html
@@ -21,10 +21,20 @@
         </div>
         <nav>
           <ul class="header_nav_ul">
-            <li class="header_nav_ul_li">Студія</li>
 
-            <li class="header_nav_ul_li">Портфоліо</li>
-            <li class="header_nav_ul_li">Контакти</li>
+            <li class="header_nav_ul_li">
+              <a href="#">Студія</a>
+              <div class="nav_overlay"> </div>
+            </li>
+
+            <li class="header_nav_ul_li">
+              <a href="#">Портфоліо</a>
+              <div class="nav_overlay"> </div>
+            </li>
+            <li class="header_nav_ul_li">
+              <a href="#">Контакти</a>
+              <div class="nav_overlay"> </div>
+            </li>
           </ul>
         </nav>
         <div class="header_div_span">
