--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
   <body>
     <header>
       <div class="header_div">
+
         <div class="header_div_div">
           <img src="img/WebStudio.png" alt="logo" />
         </div>
+
         <nav>
           <ul class="header_nav_ul">
 
@@ -37,9 +39,10 @@
             </li>
           </ul>
         </nav>
+
         <div class="header_div_span">
-          <span>info@devstudio.com</span>
-          <span>+38 096 111 11 11</span>
+          <p>info@devstudio.com</p>
+          <p>+38 096 111 11 11</p>
         </div>
       </div>
     </header>
@@ -298,26 +301,28 @@
 
       <section class="brands">
         <h2>Постійні клієнти</h2>
-        <div>
-          <svg class="svg_icon_brands">
-            <use href="img/symbol-defs1.svg#icon-Client1"></use>
-          </svg>
-          <svg class="svg_icon_brands">
-            <use href="img/symbol-defs1.svg#icon-Client2"></use>
-          </svg>
-          <svg class="svg_icon_brands">
-            <use href="img/symbol-defs1.svg#icon-Client3"></use>
-          </svg>
-          <svg class="svg_icon_brands">
-            <use href="img/symbol-defs1.svg#icon-Client4"></use>
-          </svg>
-          <svg class="svg_icon_brands">
-            <use href="img/symbol-defs1.svg#icon-Client5"></use>
-          </svg>
-          <svg class="svg_icon_brands">
-            <use href="img/symbol-defs1.svg#icon-Client6"></use>
-          </svg>
-        </div>
+        
+          <div class="brands_cheto">
+            <svg class="svg_icon_brands">
+              <use href="img/symbol-defs1.svg#icon-Client1"></use>
+            </svg>
+            <svg class="svg_icon_brands">
+              <use href="img/symbol-defs1.svg#icon-Client2"></use>
+            </svg>
+            <svg class="svg_icon_brands">
+              <use href="img/symbol-defs1.svg#icon-Client3"></use>
+            </svg>
+            <svg class="svg_icon_brands">
+              <use href="img/symbol-defs1.svg#icon-Client4"></use>
+            </svg>
+            <svg class="svg_icon_brands">
+              <use href="img/symbol-defs1.svg#icon-Client5"></use>
+            </svg>
+            <svg class="svg_icon_brands">
+              <use href="img/symbol-defs1.svg#icon-Client6"></use>
+            </svg>
+          </div>
+        
       </section>
     </main>
 
