--- a/index.html
+++ b/index.html
@@ -164,6 +164,10 @@
       <section class="special">
         <div class="special_content">
           <div class="special_div">
+            <svg class="special_svg">
+              <use href="/img/Group1.svg">
+              </use>
+            </svg>
             <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
             <p>
               Ідейні міркування, і навіть початок повсякденної роботи з
@@ -171,6 +175,10 @@
             </p>
           </div>
           <div class="special_div">
+            <svg class="special_svg">
+              <use href="/img/Group2.svg">
+              </use>
+            </svg>
             <h3>ПУНКТУАЛЬНІСТЬ</h3>
             <p>
               Завдання організації, особливо рамки і місце навчання кадрів тягне
@@ -178,12 +186,20 @@
             </p>
           </div>
           <div class="special_div">
+            <svg class="special_svg">
+              <use href="/img/Group3.svg">
+              </use>
+            </svg>
             <h3>ПЛАНУВАННЯ</h3>
             <p>
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </div>
           <div class="special_div">
+            <svg class="special_svg">
+              <use href="/img/Group4.svg">
+              </use>
+            </svg>
             <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p>
               Значимість цих проблем настільки очевидна, що реалізація планових
