--- a/extra.html
+++ b/extra.html
@@ -24,12 +24,12 @@
       <nav>
         <ul class="header_nav_ul">
           <li class="header_nav_ul_li">
-            <a href="#" style="color: #2196f3">Студія</a>
+            <a href="index.html" >Студія</a>
             <div class="nav_overlay"></div>
           </li>
 
           <li class="header_nav_ul_li">
-            <a href="/extra.html">Портфоліо</a>
+            <a href="#" style="color: #2196f3">Портфоліо</a>
             <div class="nav_overlay"></div>
           </li>
           <li class="header_nav_ul_li">
@@ -97,15 +97,26 @@
       </div>
 
       <div class="photo_content">
+
+
         <div class="photobox">
+          
           <img src="/img/img.png" alt="photo" />
+          <div class="overlayy">
+            <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+          </div>
           <div class="textboxport">
             <h4>Технокряк</h4>
             <p>Веб-сайт</p>
           </div>
         </div>
+
+
         <div class="photobox">
           <img src="/img/img1.png" alt="photo" />
+          <div class="overlayy">
+            <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+          </div>
           <div class="textboxport">
             <h4>Технокряк</h4>
             <p>Веб-сайт</p>
@@ -113,6 +124,9 @@
         </div>
         <div class="photobox">
           <img src="/img/img2.png" alt="photo" />
+          <div class="overlayy">
+            <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+          </div>
           <div class="textboxport">
             <h4>Технокряк</h4>
             <p>Веб-сайт</p>
@@ -120,6 +134,9 @@
         </div>
         <div class="photobox">
           <img src="/img/img3.png" alt="photo" />
+          <div class="overlayy">
+            <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+          </div>
           <div class="textboxport">
             <h4>Технокряк</h4>
             <p>Веб-сайт</p>
@@ -127,6 +144,9 @@
         </div>
         <div class="photobox">
           <img src="/img/img4.png" alt="photo" />
+          <div class="overlayy">
+            <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+          </div>
           <div class="textboxport">
             <h4>Технокряк</h4>
             <p>Веб-сайт</p>
@@ -134,6 +154,9 @@
         </div>
         <div class="photobox">
           <img src="/img/img5.png" alt="photo" />
+          <div class="overlayy">
+            <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+          </div>
           <div class="textboxport">
             <h4>Технокряк</h4>
             <p>Веб-сайт</p>
@@ -141,6 +164,9 @@
         </div>
         <div class="photobox">
           <img src="/img/img6.png" alt="photo" />
+          <div class="overlayy">
+            <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+          </div>
           <div class="textboxport">
             <h4>Технокряк</h4>
             <p>Веб-сайт</p>
@@ -148,6 +174,9 @@
         </div>
         <div class="photobox">
           <img src="/img/img7.png" alt="photo" />
+          <div class="overlayy">
+            <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+          </div>
           <div class="textboxport">
             <h4>Технокряк</h4>
             <p>Веб-сайт</p>
@@ -155,6 +184,9 @@
         </div>
         <div class="photobox">
           <img src="/img/img8.png" alt="photo" />
+          <div class="overlayy">
+            <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+          </div>
           <div class="textboxport">
             <h4>Технокряк</h4>
             <p>Веб-сайт</p>
@@ -212,10 +244,7 @@
       </div>
     </div>
   </footer>
-  <script src="./modal.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-    crossorigin="anonymous"></script>
+  <script src="./burger.js"></script>
 </body>
 
 </html>
