--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       <h2>Наша команда</h2>
       <div class="team_content">
         <div class="team_content_div">
-          <img src="img/img.jpg" alt="img" />
+          <img src="img/img.jpg" srcset="img/img2x.jpg 2x" alt="img" />
           <h4>Ігор Дем'яненко</h4>
           <h5>Product Designer</h5>
           <div class="div_icons">
@@ -260,7 +260,7 @@
         </div>
 
         <div class="team_content_div">
-          <img src="img/img (1).jpg" alt="img" />
+          <img src="img/img (1).jpg" srcset="img/img (1)2x.jpg 2x" alt="img" />
           <h4>Ольга Рєпіна</h4>
           <h5>Frontend Developer</h5>
           <div class="div_icons">
@@ -280,7 +280,7 @@
         </div>
 
         <div class="team_content_div">
-          <img src="img/img (2).jpg" alt="img" />
+          <img src="img/img (2).jpg" srcset="img/img (2)2x.jpg 2x" alt="img" />
           <h4>Микола Тарасов</h4>
           <h5>Marketing</h5>
           <div class="div_icons">
@@ -300,7 +300,7 @@
         </div>
 
         <div class="team_content_div">
-          <img src="img/img (3).jpg" alt="img" />
+          <img src="img/img (3).jpg" srcset="img/img (3)2x.jpg 2x" alt="img" />
           <h4>Михайло Єрмаков</h4>
           <h5>UI Designer</h5>
           <div class="div_icons">
@@ -399,6 +399,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
     crossorigin="anonymous"></script>
+    <script src="./burger.js"></script>
 </body>
 
 </html>
